--- a/frontend/account.html
+++ b/frontend/account.html
@@ -35,6 +35,7 @@
                     <img id="profile-pic" src="images/default-profile.png" alt="User Profile Picture" class="profile-pic">
                     <label for="upload-input" class="upload-btn">Upload Profile Photo</label>
                     <input type="file" id="upload-input" accept="image/*" style="display: none;">
+                    <p id="upload-message" class="success-message"></p>
                 </div>
                 <div class="info-section">
                     <h3 id="username">Welcome, User!</h3>
@@ -63,7 +64,7 @@
     <script>
         // Fetch and display account info
         async function fetchAccountInfo() {
-            let token = localStorage.getItem('token')?.trim();
+            const token = localStorage.getItem('token')?.trim();
             console.log("Token sent with request:", token);
 
             if (!token) {
@@ -89,14 +90,15 @@
                         document.getElementById('profile-pic').src = user.profilePicture;
                     }
                 } else {
-                    console.error("Error fetching account info:", await response.text());
+                    const errorText = await response.text();
+                    console.error("Error fetching account info:", errorText);
                     alert("Error fetching account info. Redirecting to login...");
                     localStorage.removeItem('token');
                     window.location.href = 'login.html';
                 }
             } catch (error) {
                 console.error("Error fetching account info:", error);
-                alert("Error fetching account info. Please try again.");
+                alert("An unexpected error occurred while fetching account info.");
             }
         }
 
@@ -111,38 +113,32 @@
             const formData = new FormData();
             formData.append('profilePicture', file);
 
-            let token = localStorage.getItem('token')?.trim();
+            const token = localStorage.getItem('token')?.trim();
             if (!token) {
                 alert("You are not logged in. Redirecting to login...");
                 window.location.href = 'login.html';
                 return;
             }
 
-            // Remove unexpected characters from token
-            token = token.replace(/[\u2028\u2029]/g, '').trim();
-            console.log("Sanitized token used for upload:", token);
-
             try {
                 const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/upload-profile-picture', {
                     method: 'POST',
-                    headers: {
-                        Authorization: `Bearer ${token}`,
-                    },
+                    headers: { Authorization: `Bearer ${token}` },
                     body: formData,
                 });
 
                 if (response.ok) {
                     const { profilePicture } = await response.json();
                     document.getElementById('profile-pic').src = profilePicture;
-                    alert("Profile picture updated successfully!");
+                    document.getElementById('upload-message').textContent = "Profile picture updated successfully!";
                 } else {
                     const errorData = await response.json();
                     console.error("Error uploading profile picture:", errorData);
-                    alert("Error uploading profile picture. Please try again.");
+                    document.getElementById('upload-message').textContent = "Error uploading profile picture.";
                 }
             } catch (error) {
                 console.error("Error uploading profile picture:", error);
-                alert("Error uploading profile picture. Please try again.");
+                document.getElementById('upload-message').textContent = "An unexpected error occurred while uploading the profile picture.";
             }
         });
 
