--- a/frontend/comments.html
+++ b/frontend/comments.html
@@ -32,7 +32,7 @@
 
       <form id="comment-form">
         <textarea id="comment-content" placeholder="Write your comment..." required></textarea>
-        <button type="submit">Post Comment</button>
+        <button type="submit">Reply</button>
         <p id="comment-error" class="error-message"></p>
       </form>
     </section>
