--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ultramarathon Connect</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <!-- Header Section -->
   <header class="sticky-header">
     <div class="logo-container">
-      <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo">
+      <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
     </div>
     <nav>
       <ul class="menu">
@@ -24,24 +26,11 @@
 
   <!-- Main Section -->
   <main>
-    <!-- Profile Section -->
-    <section class="profile-container">
-      <div class="account-card">
-        <div class="profile-section">
-          <img id="profile-pic" src="images/default-profile.png" alt="User Profile Picture" class="profile-pic" onerror="this.src='images/default-profile.png'">
-        </div>
-        <div class="info-section">
-          <h3 id="username">Welcome, User!</h3>
-          <p id="email"><strong>Email:</strong> user@example.com</p>
-        </div>
-      </div>
-    </section>
-
     <!-- Carousel Section -->
     <div class="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="images/ultramarathon_images/download1_ultramarathon.jpeg" alt="Trail Run">
+          <img src="images/ultramarathon_images/download1_ultramarathon.jpeg" alt="Trail Run" />
           <div class="carousel-overlay">
             <h1>Welcome to Ultramarathon Connect</h1>
             <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
@@ -49,7 +38,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="images/ultramarathon_images/download2_ultramarathon.jpeg" alt="Mountain Trail">
+          <img src="images/ultramarathon_images/download2_ultramarathon.jpeg" alt="Mountain Trail" />
           <div class="carousel-overlay">
             <h1>Welcome to Ultramarathon Connect</h1>
             <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
@@ -57,7 +46,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="images/ultramarathon_images/download3_ultramarathon.jpg" alt="Forest Trail">
+          <img src="images/ultramarathon_images/download3_ultramarathon.jpg" alt="Forest Trail" />
           <div class="carousel-overlay">
             <h1>Welcome to Ultramarathon Connect</h1>
             <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
@@ -65,7 +54,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="images/ultramarathon_images/download4_ultramarathon.jpeg" alt="Desert Trail">
+          <img src="images/ultramarathon_images/download4_ultramarathon.jpeg" alt="Desert Trail" />
           <div class="carousel-overlay">
             <h1>Welcome to Ultramarathon Connect</h1>
             <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
@@ -73,7 +62,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="images/ultramarathon_images/download5_ultramarathon.jpeg" alt="Snowy Trail">
+          <img src="images/ultramarathon_images/download5_ultramarathon.jpeg" alt="Snowy Trail" />
           <div class="carousel-overlay">
             <h1>Welcome to Ultramarathon Connect</h1>
             <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
@@ -95,11 +84,6 @@
         <p>Connect with fellow ultrarunners for training tips, race strategies, and meetups.</p>
         <button class="orange-btn" onclick="window.location.href='forum.html'">Explore Runner Community</button>
       </div>
-      <div class="feature">
-        <h2>Training Tips</h2>
-        <p>Access expert advice on training, nutrition, and recovery for ultramarathons.</p>
-        <button class="orange-btn" onclick="window.location.href='training_tips.html'">Start Training</button>
-      </div>
     </section>
   </main>
 
@@ -118,4 +102,5 @@
   <!-- Scripts -->
   <script src="index_script.js"></script>
 </body>
+
 </html>
