--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,118 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ultramarathon Connect</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ultramarathon Connect</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
+
 <body>
-  <!-- Header -->
-  <header class="sticky-header">
-    <div class="logo-container">
-      <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
-    </div>
-    <nav>
-      <ul class="menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="race_directory.html">Race Directory</a></li>
-        <li><a href="forum.html">Runner Community</a></li>
-        <li id="account-tab"></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <!-- Carousel -->
-    <div class="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="images/ultramarathon_images/download1_ultramarathon.jpeg" alt="Trail Run" />
-          <div class="carousel-overlay">
-            <h1>Welcome to Ultramarathon Connect</h1>
-            <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
-            <button onclick="window.location.href='race_directory.html'">Find a Race</button>
-          </div>
+    <!-- Header -->
+    <header class="sticky-header">
+        <div class="logo-container">
+            <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
         </div>
-        <div class="carousel-item">
-          <img src="images/ultramarathon_images/download2_ultramarathon.jpeg" alt="Mountain Trail" />
-          <div class="carousel-overlay">
-            <h1>Welcome to Ultramarathon Connect</h1>
-            <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
-            <button onclick="window.location.href='race_directory.html'">Find a Race</button>
-          </div>
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="race_directory.html">Race Directory</a></li>
+                <li><a href="forum.html">Runner Community</a></li>
+                <li id="account-tab"></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <!-- Carousel -->
+        <div class="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/ultramarathon_images/download1_ultramarathon.jpeg" alt="Trail Run" />
+                    <div class="carousel-overlay">
+                        <h1>Welcome to Ultramarathon Connect</h1>
+                        <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
+                        <button onclick="window.location.href='race_directory.html'">Find a Race</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/ultramarathon_images/download2_ultramarathon.jpeg" alt="Mountain Trail" />
+                    <div class="carousel-overlay">
+                        <h1>Welcome to Ultramarathon Connect</h1>
+                        <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
+                        <button onclick="window.location.href='race_directory.html'">Find a Race</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/ultramarathon_images/download3_ultramarathon.jpg" alt="Forest Trail" />
+                    <div class="carousel-overlay">
+                        <h1>Welcome to Ultramarathon Connect</h1>
+                        <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
+                        <button onclick="window.location.href='race_directory.html'">Find a Race</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/ultramarathon_images/download4_ultramarathon.jpeg" alt="Desert Trail" />
+                    <div class="carousel-overlay">
+                        <h1>Welcome to Ultramarathon Connect</h1>
+                        <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
+                        <button onclick="window.location.href='race_directory.html'">Find a Race</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/ultramarathon_images/download5_ultramarathon.jpeg" alt="Snowy Trail" />
+                    <div class="carousel-overlay">
+                        <h1>Welcome to Ultramarathon Connect</h1>
+                        <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
+                        <button onclick="window.location.href='race_directory.html'">Find a Race</button>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="carousel-item">
-          <img src="images/ultramarathon_images/download3_ultramarathon.jpg" alt="Forest Trail" />
-          <div class="carousel-overlay">
-            <h1>Welcome to Ultramarathon Connect</h1>
-            <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
-            <button onclick="window.location.href='race_directory.html'">Find a Race</button>
-          </div>
+
+        <!-- Race Map Preview -->
+        <section class="map-preview">
+            <h2>Explore Upcoming Races</h2>
+            <div id="race-map"></div>
+            <button class="orange-btn" onclick="window.location.href='race_directory.html'">Browse Full
+                Directory</button>
+        </section>
+
+
+        <!-- Recent Forum Posts - Now Below Map -->
+        <section class="latest-posts">
+            <h2>Recent Conversations</h2>
+            <div id="forum-preview-list" class="forum-preview-list"></div>
+            <button class="orange-btn" onclick="window.location.href='forum.html'">View All Posts</button>
+        </section>
+
+        <!-- Features Section -->
+        <section class="features">
+            <div class="feature">
+                <h2>Find a Race</h2>
+                <p>Explore our comprehensive directory of ultramarathons by distance, location, and terrain.</p>
+                <button class="orange-btn" onclick="window.location.href='race_directory.html'">View Directory</button>
+            </div>
+            <div class="feature">
+                <h2>Runner Community</h2>
+                <p>Connect with fellow ultrarunners for training tips, race strategies, and meetups.</p>
+                <button class="orange-btn" onclick="window.location.href='forum.html'">Explore Runner Community</button>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer class="site-footer">
+        <div class="footer-links">
+            <a href="contact.html">Contact Us</a> |
+            <a href="privacy.html">Privacy Policy</a> |
+            <a href="termsofservice.html">Terms of Service</a> |
+            <a href="faq.html">FAQ</a> |
+            <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
         </div>
-        <div class="carousel-item">
-          <img src="images/ultramarathon_images/download4_ultramarathon.jpeg" alt="Desert Trail" />
-          <div class="carousel-overlay">
-            <h1>Welcome to Ultramarathon Connect</h1>
-            <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
-            <button onclick="window.location.href='race_directory.html'">Find a Race</button>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="images/ultramarathon_images/download5_ultramarathon.jpeg" alt="Snowy Trail" />
-          <div class="carousel-overlay">
-            <h1>Welcome to Ultramarathon Connect</h1>
-            <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
-            <button onclick="window.location.href='race_directory.html'">Find a Race</button>
-          </div>
-        </div>
-      </div>
-    </div>
+        <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
+    </footer>
 
-    <!-- Race Map Preview - Moved Up -->
-    <section class="map-preview">
-      <h2>Explore Upcoming Races</h2>
-      <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1b7OBFDRHZDK0TskQUO3z-BowXM3CPcIA&ehbc=2E312F" width="640" height="480"></iframe>
-      <button class="orange-btn" onclick="window.location.href='race_directory.html'">Browse Full Directory</button>
-    </section>
-
-    <!-- Recent Forum Posts - Now Below Map -->
-    <section class="latest-posts">
-      <h2>Recent Conversations</h2>
-      <div id="forum-preview-list" class="forum-preview-list"></div>
-      <button class="orange-btn" onclick="window.location.href='forum.html'">View All Posts</button>
-    </section>
-
-    <!-- Features Section -->
-    <section class="features">
-      <div class="feature">
-        <h2>Find a Race</h2>
-        <p>Explore our comprehensive directory of ultramarathons by distance, location, and terrain.</p>
-        <button class="orange-btn" onclick="window.location.href='race_directory.html'">View Directory</button>
-      </div>
-      <div class="feature">
-        <h2>Runner Community</h2>
-        <p>Connect with fellow ultrarunners for training tips, race strategies, and meetups.</p>
-        <button class="orange-btn" onclick="window.location.href='forum.html'">Explore Runner Community</button>
-      </div>
-    </section>
-  </main>
-
-  <!-- Footer -->
-  <footer class="site-footer">
-    <div class="footer-links">
-      <a href="contact.html">Contact Us</a> |
-      <a href="privacy.html">Privacy Policy</a> |
-      <a href="termsofservice.html">Terms of Service</a> |
-      <a href="faq.html">FAQ</a> |
-      <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
-    </div>
-    <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
-  </footer>
-
-  <!-- Scripts -->
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="index_script.js"></script>
+    <!-- Scripts -->
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script src="index_script.js"></script>
 </body>
+
 </html>
