--- a/frontend/forum.html
+++ b/frontend/forum.html
@@ -17,8 +17,7 @@
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="race_directory.html">Race Directory</a></li>
-        <li><a href="articles.html">Articles</a></li>
-        <li><a href="forum.html">Forum</a></li>
+        <li><a href="forum.html">Runner Community</a></li>
         <li id="account-tab" class="auth-tab"></li>
       </ul>
     </nav>
@@ -117,6 +116,7 @@
   </footer>
 
   <script src="forum_script.js"></script>
+  <script src="index_script.js"></script>
 </body>
 
 </html>
