--- a/frontend/race_directory.html
+++ b/frontend/race_directory.html
@@ -1,110 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Race Directory - Ultramarathon Finder</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Race Directory - Ultramarathon Finder</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-  <header class="sticky-header">
-    <div class="logo-container">
-      <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
-    </div>
-    <nav>
-      <ul class="menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="race_directory.html">Race Directory</a></li>
-        <li><a href="forum.html">Runner Community</a></li>
-        <li id="account-tab"></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <section class="directory-section">
-      <h2 class="directory-title">Find Your Next Epic Challenge</h2>
-      <p class="directory-subtext">Browse an ever-growing list of ultramarathons worldwide — filter by distance, region, and more to plan your next adventure.</p>
-
-      <div class="filter-layout">
-        <!-- Sidebar Filters -->
-        <aside class="filter-sidebar">
-          <label for="races-per-page" style="font-weight: bold;">Races per page:</label>
-          <select id="races-per-page" style="margin-bottom: 1rem;">
-            <option value="20">20</option>
-            <option value="40">40</option>
-            <option value="60">60</option>
-          </select>
-
-          <input type="text" id="search-bar" placeholder="Search by name, location" />
-
-          <h4>Distance Range</h4>
-          <label><input type="checkbox" class="distance-range" value="26-40"> 26–40 mi</label>
-          <label><input type="checkbox" class="distance-range" value="41-60"> 41–60 mi</label>
-          <label><input type="checkbox" class="distance-range" value="61-90"> 61–90 mi</label>
-          <label><input type="checkbox" class="distance-range" value="91-110"> 91–110 mi</label>
-          <label><input type="checkbox" class="distance-range" value="110+"> 110 mi +</label>
-
-          <h4>Duration</h4>
-          <label><input type="checkbox" class="duration-range" value="<7"> &lt; 7 hrs</label>
-          <label><input type="checkbox" class="duration-range" value="7-12"> 7–12 hrs</label>
-          <label><input type="checkbox" class="duration-range" value="13-24"> 13–24 hrs</label>
-          <label><input type="checkbox" class="duration-range" value="25-72"> 25–72 hrs</label>
-          <label><input type="checkbox" class="duration-range" value=">73"> &gt; 73 hrs</label>
-          <label><input type="checkbox" class="duration-range" value="Backyard"> Backyard</label>
-
-          <h4>Month</h4>
-          <select id="month-filter">
-            <option value="">All Months</option>
-            <option value="January">January</option>
-            <option value="February">February</option>
-            <option value="March">March</option>
-            <option value="April">April</option>
-            <option value="May">May</option>
-            <option value="June">June</option>
-            <option value="July">July</option>
-            <option value="August">August</option>
-            <option value="September">September</option>
-            <option value="October">October</option>
-            <option value="November">November</option>
-            <option value="December">December</option>
-          </select>
-
-          <h4>Region</h4>
-          <select id="region-filter">
-            <option value="">All Regions</option>
-            <option value="North America">North America</option>
-            <option value="South America">South America</option>
-            <option value="Europe">Europe</option>
-            <option value="Africa">Africa</option>
-            <option value="Asia">Asia</option>
-            <option value="Australia">Australia</option>
-            <option value="Antarctica">Antarctica</option>
-          </select>
-
-          <button id="reset-filters">Reset Filters</button>
-        </aside>
-
-        <!-- Race Results Grid -->
-        <div class="race-grid">
-          <div id="race-list"></div>
-          <div id="pagination-controls" class="pagination-controls"></div>
+    <header class="sticky-header">
+        <div class="logo-container">
+            <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
         </div>
-      </div>
-    </section>
-  </main>
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="race_directory.html">Race Directory</a></li>
+                <li><a href="forum.html">Runner Community</a></li>
+                <li id="account-tab" class="auth-tab"></li>
+            </ul>
+        </nav>
+    </header>
 
-  <footer class="site-footer">
-    <div class="footer-links">
-      <a href="contact.html">Contact Us</a> |
-      <a href="privacy.html">Privacy Policy</a> |
-      <a href="termsofservice.html">Terms of Service</a> |
-      <a href="faq.html">FAQ</a> |
-      <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
-    </div>
-    <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
-  </footer>
+    <main>
+        <section class="directory-section">
+            <h2 class="directory-title">Find Your Next Epic Challenge</h2>
+            <p class="directory-subtext">Browse an ever-growing list of ultramarathons worldwide — filter by distance,
+                region, and more to plan your next adventure.</p>
 
-  <script src="race_directory_script.js"></script>
+            <div class="filter-layout">
+                <!-- Sidebar Filters -->
+                <aside class="filter-sidebar">
+                    <label for="races-per-page" style="font-weight: bold;">Races per page:</label>
+                    <select id="races-per-page" style="margin-bottom: 1rem;">
+                        <option value="20">20</option>
+                        <option value="40">40</option>
+                        <option value="60">60</option>
+                    </select>
+
+                    <input type="text" id="search-bar" placeholder="Search by name, location" />
+
+                    <h4>Distance Range</h4>
+                    <label><input type="checkbox" class="distance-range" value="26-40"> 26–40 mi</label>
+                    <label><input type="checkbox" class="distance-range" value="41-60"> 41–60 mi</label>
+                    <label><input type="checkbox" class="distance-range" value="61-90"> 61–90 mi</label>
+                    <label><input type="checkbox" class="distance-range" value="91-110"> 91–110 mi</label>
+                    <label><input type="checkbox" class="distance-range" value="110+"> 110 mi +</label>
+
+                    <h4>Duration</h4>
+                    <label><input type="checkbox" class="duration-range" value="<7"> &lt; 7 hrs</label>
+                    <label><input type="checkbox" class="duration-range" value="7-12"> 7–12 hrs</label>
+                    <label><input type="checkbox" class="duration-range" value="13-24"> 13–24 hrs</label>
+                    <label><input type="checkbox" class="duration-range" value="25-72"> 25–72 hrs</label>
+                    <label><input type="checkbox" class="duration-range" value=">73"> &gt; 73 hrs</label>
+                    <label><input type="checkbox" class="duration-range" value="Backyard"> Backyard</label>
+
+                    <h4>Month</h4>
+                    <select id="month-filter">
+                        <option value="">All Months</option>
+                        <option value="January">January</option>
+                        <option value="February">February</option>
+                        <option value="March">March</option>
+                        <option value="April">April</option>
+                        <option value="May">May</option>
+                        <option value="June">June</option>
+                        <option value="July">July</option>
+                        <option value="August">August</option>
+                        <option value="September">September</option>
+                        <option value="October">October</option>
+                        <option value="November">November</option>
+                        <option value="December">December</option>
+                    </select>
+
+                    <h4>Region</h4>
+                    <select id="region-filter">
+                        <option value="">All Regions</option>
+                        <option value="North America">North America</option>
+                        <option value="South America">South America</option>
+                        <option value="Europe">Europe</option>
+                        <option value="Africa">Africa</option>
+                        <option value="Asia">Asia</option>
+                        <option value="Australia">Australia</option>
+                        <option value="Antarctica">Antarctica</option>
+                    </select>
+
+                    <button id="reset-filters">Reset Filters</button>
+                </aside>
+
+                <!-- Race Results Grid -->
+                <div class="race-grid">
+                    <div id="race-list"></div>
+                    <div id="pagination-controls" class="pagination-controls"></div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="site-footer">
+        <div class="footer-links">
+            <a href="contact.html">Contact Us</a> |
+            <a href="privacy.html">Privacy Policy</a> |
+            <a href="termsofservice.html">Terms of Service</a> |
+            <a href="faq.html">FAQ</a> |
+            <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
+        </div>
+        <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
+    </footer>
+
+    <script src="race_directory_script.js"></script>
+    <script src="index_script.js"></script>
 </body>
+
 </html>
