--- a/frontend/register.html
+++ b/frontend/register.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Register - Ultramarathon Connect</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Header -->
   <header class="sticky-header">
     <div class="logo-container">
-      <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo">
+      <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
     </div>
     <nav>
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="race_directory.html">Race Directory</a></li>
         <li><a href="forum.html">Runner Community</a></li>
-        <li><a href="login.html">Login</a></li>
+        <li id="account-tab" class="auth-tab"></li>
       </ul>
     </nav>
   </header>
 
+  <!-- Main -->
   <main>
     <div class="form-container">
       <div class="form-card">
@@ -28,28 +30,29 @@
         <form id="register-form">
           <div class="form-group">
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username" placeholder="Choose a username" required>
+            <input type="text" id="username" name="username" placeholder="Choose a username" required />
           </div>
 
           <div class="form-group">
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Enter your email" required>
+            <input type="email" id="email" name="email" placeholder="Enter your email" required />
           </div>
 
           <div class="form-group">
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" placeholder="Create a password" required>
+            <input type="password" id="password" name="password" placeholder="Create a password" required />
             <small>Password must be at least 6 characters long and include one uppercase letter, one number, and one special character.</small>
           </div>
 
           <button type="submit" class="orange-btn">Register</button>
         </form>
         <p id="register-message" class="error-message"></p>
-        <p>Already have an account? <a href="login.html">Login here</a>.</p>
+        <p>Already have an account? <a href="login.html"><strong>Login here</strong></a>.</p>
       </div>
     </div>
   </main>
 
+  <!-- Footer -->
   <footer class="site-footer">
     <div class="footer-links">
       <a href="contact.html">Contact Us</a> |
@@ -61,6 +64,7 @@
     <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
   </footer>
 
+  <!-- Script -->
   <script>
     document.getElementById('register-form').addEventListener('submit', async (e) => {
       e.preventDefault();
@@ -82,9 +86,7 @@
       try {
         const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/register', {
           method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
+          headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ username, email, password })
         });
 
@@ -93,13 +95,11 @@
         if (response.ok) {
           document.getElementById('register-message').textContent = 'Registration successful! Redirecting to login...';
           document.getElementById('register-message').classList.add('success-message');
-          setTimeout(() => {
-            window.location.href = 'login.html';
-          }, 2000);
+          setTimeout(() => window.location.href = 'login.html', 2000);
         } else {
           document.getElementById('register-message').textContent = data.message || 'Error: Registration failed.';
         }
-      } catch (error) {
+      } catch {
         document.getElementById('register-message').textContent = 'Error: Could not register user.';
       }
     });
